# PyRHEED

./: .gitignore  README.md  TUTORIAL_en.md  TUTORIAL_zh.md  pyproject.toml
cif_samples/: README.md
cif_samples/dybco_growth_intermediates/: BaCu3O4_COD1522309.cif  BaO_COD1527735.cif  CuO_mp14549.cif  Dy2BaCuO5_211_COD1526528.cif  Dy2O3_COD1539592.cif  Dy3Ba5Cu8O18_385_Pmm2_Landinez2021.cif  DyBa4Cu3O8.5_143_COD1522334.cif  Gd3Ba5Cu8O18_385_Pmm2_Landinez2021.cif  README.md  Y3Ba5Cu8O18_385_Pmm2_Landinez2021.cif  YBa4Cu3O8.5_143_COD1539855.cif
cif_samples/experimental_COD/: YBa2Cu3O7_COD1001453.cif
cif_samples/substrates/: README.md  SrTiO3_COD9006864.cif  _test23076.cif
scripts/: test_xrd_all_modes_cif.py  test_xrd_extensions.py  test_xrd_integration.py  test_xrd_k_grid.py  test_xrd_scan.py  verify_peng_form_factors.py
src/: bar_chart.py  boundary_statistics.py  broadening.py  browser.py  canvas.py  configuration.py  cursor.py  default_scenario.ini  electron_form_factors.py  ewald.py  four_circle_geometry.py  generate_report.py  gmm.py  graph_3D_surface.py  kikuchi.py  main.py  manual_fit.py  my_widgets.py  plot_chart.py  preference.py  probe_geometry.py  process.py  process_monitor.py  profile_chart.py  properties.py  reciprocal_space_mapping.py  regularization.py  scattering_factors.py  scenario.py  scipy_test.py  simulate_RHEED.py  statistical_factor.py  structure_io.py  translational_antiphase_domain.py  window.py  write_scenario.py  xrd_constraints.py  xrd_ewald.py  xrd_k_grid.py  xrd_reflection_planner.py  (+1 more)
