[project]
name = "pyrheed"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "appdirs>=1.4.4",
    "astropy>=7.0.1",
    "astropy-iers-data>=0.2025.3.3.0.34.45",
    "certifi>=2025.1.31",
    "cftime>=1.6.4.post1",
    "charset-normalizer>=3.4.1",
    "contourpy>=1.3.1",
    "cycler>=0.12.1",
    "cython>=3.0.12",
    "et-xmlfile>=2.0.0",
    "fonttools>=4.56.0",
    "future>=1.0.0",
    "idna>=3.10",
    "importlib-metadata>=8.6.1",
    "joblib>=1.4.2",
    "kiwisolver>=1.4.8",
    "latexcodec>=3.0.0",
    "lxml>=5.3.1",
    "mako>=1.3.9",
    "markupsafe>=3.0.2",
    "matplotlib>=3.10.1",
    "monty>=2025.3.3",
    "mpmath>=1.3.0",
    "narwhals>=1.29.0",
    "netcdf4>=1.7.2",
    "networkx>=3.4.2",
    "numpy>=2.2.3",
    "openpyxl>=3.1.5",
    "packaging>=24.2",
    "palettable>=3.3.3",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pip-review>=1.3.0",
    "platformdirs>=4.3.6",
    "plotly>=6.0.0",
    "pybtex>=0.24.0",
    "pyerfa>=2.0.1.5",
    "pymatgen>=2025.2.18",
    "pyparsing>=3.2.1",
    "pyqt6>=6.8.1",
    "pyqt6-charts>=6.8.0",
    "pyqt6-charts-qt6>=6.8.2",
    "pyqt6-datavisualization>=6.8.0",
    "pyqt6-datavisualization-qt6>=6.8.2",
    "pyqt6-qt6>=6.8.2",
    "pyqt6-sip>=13.10.0",
    "python-dateutil>=2.9.0.post0",
    "pytools>=2025.1.1",
    "pytz>=2025.1",
    "pyyaml>=6.0.2",
    "rawpy>=0.24.0",
    "requests>=2.32.3",
    "ruamel-yaml>=0.18.10",
    "ruamel-yaml-clib>=0.2.12",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "shapely>=2.0.7",
    "six>=1.17.0",
    "spglib>=2.5.0",
    "sympy>=1.13.3",
    "tabulate>=0.9.0",
    "tenacity>=9.0.0",
    "threadpoolctl>=3.5.0",
    "tqdm>=4.67.1",
    "typing-extensions>=4.12.2",
    "tzdata>=2025.1",
    "uncertainties>=3.2.2",
    "urllib3>=2.3.0",
    "xlrd>=2.0.1",
    "zipp>=3.21.0",
]
